--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "drum_machine",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://KamilaDyn.github.io/drum-machine/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "save-dev": "0.0.1-security"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
